--- a/index.html
+++ b/index.html
@@ -442,8 +442,6 @@
                   As the founder of Shine Up, I lead a team providing top-notch services in web development, video editing, animation, graphic design, product photography, SEO management, and social media handling. With our expertise, we've successfully collaborated with over 5 clients from diverse sectors, delivering exceptional results and exceeding expectations.
                 </p><br>
                 <h4 class="h4 service-item-title">
-                "Time To Shine Up"
-                </h4>
               </div>
               </li>
 
@@ -467,7 +465,7 @@
           <section class="counters">
             <div class="container-counter">
               <div>
-                <div class="counter" data-target="5" data-text="+" style="color: gold; font-size:70px">0 </div><p>+</p>
+                <div class="counter" data-target="10" data-text="+" style="color: gold; font-size:70px">0 </div><p>+</p>
                 <h4 class="h4 service-item-title">Clients</h4>
               </div>
             </div>
@@ -640,7 +638,7 @@
                 </a>
               </li>
 
-              <li class="clients-item">
+              <!-- <li class="clients-item">
                 <a href="#">
                   <img
                     src="./assets/images/works/postereng.webp"
@@ -648,6 +646,15 @@
                   />
                 </a>
               </li>
+
+              <li class="clients-item">
+                <a href="#">
+                  <img
+                    src="./assets/images/works/viralaccounts.webp"
+                    alt="viralaccounts"
+                  />
+                </a>
+              </li> -->
 
               <li class="clients-item">
                 <a href="#">
@@ -825,7 +832,18 @@
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Graphic design</h5>
-                  <data value="80">80%</data>
+                  <data value="85">85%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 80%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Video Editing</h5>
+                  <data value="75">75%</data>
                 </div>
 
                 <div class="skill-progress-bg">
@@ -836,7 +854,7 @@
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Animations</h5>
-                  <data value="70">70%</data>
+                  <data value="60">60%</data>
                 </div>
 
                 <div class="skill-progress-bg">
@@ -1054,6 +1072,102 @@
               <li
                 class="project-item active"
                 data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/accscart.webp"
+                      alt="Acccart poster"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Marketing Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/accountscorner.webp"
+                      alt="accountscorner poster"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Marketing Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/bestpvaaccounts.webp"
+                      alt="Best PVA account"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Marketing Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/viralaccounts.webp"
+                      alt="Viral Account"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Marketing Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
                 data-category="video editing"
               >
                 <div id="video-container">
@@ -1240,13 +1354,37 @@
                     </div>
 
                     <img
+                      src="./assets/images/works/manickavasagam.webp"
+                      alt="Zero-G Event website"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">HR Consultancy website</h3>
+
+                  <p class="project-category">Web development</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="web development"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
                       src="./assets/images/works/carrent.png"
                       alt="Zero-G Event website"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Event website</h3>
+                  <h3 class="project-title">Cultural Event website</h3>
 
                   <p class="project-category">Web development</p>
                 </a>
