--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
+              class="loki-img-box"
               src="assets/images/loki.jpg"
               alt="Lokesh"
-              width="80"
+              width="80" 
+              style="border-radius: 20px; border: 3px solid #ffdb70ff;"
             />
           </figure>
 
@@ -1473,7 +1475,7 @@
                       src="./assets/images/behance.png"
                       alt="behance"
                       loading="lazy"
-                      style="height: 100%; width: 250px; margin-top: 55px"
+                      style="height: 100%; width: 250px; margin-top: 5px;"
                     />
                   </a>
                 </div>
