--- a/index.html
+++ b/index.html
@@ -1593,6 +1593,14 @@
                     <ion-icon name="logo-instagram"></ion-icon>
                   </a>
                 </li>
+                <li class="social-item">
+                  <a
+                    href="https://github.com/LokeshNivash/"
+                    class="social-link"
+                  >
+                    <ion-icon name="logo-github"></ion-icon>
+                  </a>
+                </li>
               </ul>
             </div>
             <!-- <a
