--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
                       src="./assets/images/behance.png"
                       alt="behance"
                       loading="lazy"
-                      style="height: 100%; width: 250px; margin-top: 5px;"
+                      style="height: 100%; width: 250px; margin-top: 5px; margin-left: 15px; margin-bottom: 10px;"
                     />
                   </a>
                 </div>
