--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           <section class="counters">
             <div class="container-counter">
               <div>
-                <div class="counter" data-target="10" data-text="+" style="color: gold; font-size:70px">0 </div><p>+</p>
+                <div class="counter" data-target="10" data-text="+" style="color: gold; font-size:70px">0 </div><p></p>
                 <h4 class="h4 service-item-title">Clients</h4>
               </div>
             </div>
