--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@
             </li>
 
             <li class="navbar-item">
+              <button class="navbar-link" data-nav-link>Services</button>
+            </li>
+
+            <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Resume</button>
             </li>
 
@@ -478,6 +482,50 @@
               </a>
             </div><br>
           </section>
+
+          <div class="digital-services">
+            <ul class="service-list">
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./assets/images/graphic-design.png"
+                    alt="graphic design icon"
+                    width="40"
+                  />
+                </div>
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Graphic Design</h4>
+                  <div class="graphic-design-icons" style="display: inline-flex;">
+                    <img src="./assets/images/photoshop.png" alt="photoshop" width="40" style="margin-right: 15px;">
+                    <img src="./assets/images/illustrator.png" alt="illustrator" width="40" style="margin-right: 11px;">
+                    <img src="./assets/images/draw.png" alt="coral-draw" width="40">
+                  </div>
+                </div>
+              </li>
+
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./assets/images/video-editing.png"
+                    alt="graphic design icon"
+                    width="40"
+                  />
+                </div>
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Video Editing</h4>
+                  <div class="graphic-design-icons" style="display: inline-flex;">
+                    <img src="./assets/images/premiere-pro.png" alt="premiere-pro" width="40" style="margin-right: 15px;">
+                    <img src="./assets/images/after-effects.png" alt="after-effects" width="40" style="margin-right: 11px;">
+                    <img src="./assets/images/davinci-resolve.png" alt="davinci-resolve" width="40"style="margin-right: 11px;">
+                    <img src="./assets/images/final-cut-pro.png" alt="final-cut-pro" width="40">
+                  </div>
+                </div>
+              </li>
+            </ul><br/>
+          </div>
+
+          
+
           <!--
           - testimonials
         -->
