--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
               <button class="navbar-link active" data-nav-link>About</button>
             </li>
 
-            <li class="navbar-item">
+            <!-- <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Services</button>
-            </li>
+            </li> -->
 
             <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Resume</button>
@@ -717,6 +717,20 @@
             </ul>
           </section>
         </article>
+
+
+        <!-- ----------------------------------------------------- -->
+
+        <!--
+        - #Services-page
+      -->
+<!-- 
+      <article class="services active" data-page="services">
+        <header>
+          <h2 class="h2 article-title">Services We Offer</h2>
+      </article> -->
+
+        <!-- ------------------------------------------------------- -->
 
         <!--
         - #RESUME
