--- a/index.html
+++ b/index.html
@@ -629,6 +629,9 @@
               </div>
             </section>
           </div>
+
+          <h3 style="color: white;   display: flex; justify-content: center; align-items: center;">Explore More Works</h3><br>
+        <button class="form-btn" id="contactButton" data-nav-link>Portfolio</button>
         </article>
 
 
@@ -645,7 +648,7 @@
             <li class="service-item">
               <div class="service-icon-box">
                 <img
-                  src="./assets/images/icon-design.svg"
+                  src="./assets/images/graphic-design.png"
                   alt="graphic design icon"
                   width="40"
                 />
@@ -806,6 +809,8 @@
             </li>
           </ul>
         </section>
+      <h3 style="color: white;   display: flex; justify-content: center; align-items: center;">Explore More Works</h3><br>
+        <button class="form-btn" id="contactButton" data-nav-link>Portfolio</button>
       </article>
 
         <!-- ------------------------------------------------------- -->
