--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
       <!--
       - #SIDEBAR
     -->
+    <div id="cursor"></div>
+    <div id="cursor-border"></div>
 
       <aside class="sidebar" data-sidebar>
         <div class="sidebar-info">
