--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,78 @@
                     </div>
 
                     <img
+                      src="./assets/images/works/moonposterutopia.webp"
+                      alt="utopia event poster"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Event Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/utopia-anime.webp"
+                      alt="utopia poster"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Event Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
+                      src="./assets/images/works/wantedposter.webp"
+                      alt="wanted poster utopia"
+                      loading="lazy"
+                    />
+                  </figure>
+
+                  <h3 class="project-title">Event Marketing Poster</h3>
+
+                  <p class="project-category">Graphic Design</p>
+                </a>
+              </li>
+              
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="graphic design"
+              >
+                <a href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img
                       src="./assets/images/works/weebposter.webp"
                       alt="weebies hub poster"
                       loading="lazy"
