--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       lokesh nivash graphic designer,weebieshub, weebies hub,weebies hub shop, weebieshub.shop, whub, weebies-hub, weebieshub linkedin, weebieshub instagram, weebieshub github, weebieshub lokesh, 
       founder weebieshub, founder of weebieshub,ceo weebieshub, ceo of weebieshub, lokesh r graphic designer, lokesh nivash 3d modeller, lokesh r 3d modeller, lokesh nivash animator, lokesh r animator, 
       lokesh nivash mechatronics engineer, lokesh r mechatronics engineer, lokesh nivash web developer, lokesh r web developer, lokesh nivash frontend developer, 
-      lokesh r frontend developer, lokesh nivash full stack developer, lokesh r full stack developer, graphic designer portfolio, 3d modeller portfolio, 
+      lokesh r frontend developer, lokesh r full stack developer, graphic designer portfolio, 3d modeller portfolio, 
       animator portfolio, mechatronics engineer portfolio, web developer portfolio, frontend developer portfolio, full stack developer portfolio, portfolio showcase, 
       digital portfolio, creative portfolio, professional portfolio, online portfolio, portfolio website, lokesh's instagram, lokesh's behance, lokesh's design portfolio"
     />
@@ -182,7 +182,6 @@
 
           <button class="info_more-btn" data-sidebar-btn>
             <span>Show Contacts</span>
-
             <ion-icon name="chevron-down"></ion-icon>
           </button>
         </div>
@@ -1192,7 +1191,7 @@
                 data-filter-item
                 data-category="graphic design"
               >
-                <a href="#">
+                <a href="https://pin.it/53xzJV7cP">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -1240,7 +1239,7 @@
                 data-filter-item
                 data-category="graphic design"
               >
-                <a href="#">
+                <a href="https://pin.it/7eoiIX03J">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -1360,7 +1359,7 @@
                 data-filter-item
                 data-category="graphic design"
               >
-                <a href="#">
+                <a href="https://pin.it/5epDSphGY">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
