--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
           <div class="info-content">
             <h1 class="name" title="Lokesh">Lokesh R</h1>
+            <h2 class="name" style="font-size: small;">Chief Editor<br> Bliend Enterprises Pvt. Ltd</h2>
 
             <p class="title" id="jobtitle">MECHATRONICS ENGINEER</p>
           </div>
@@ -877,7 +878,18 @@
             </div>
 
             <ol class="timeline-list">
-              
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Chief Editor</h4>
+                <h4 class="h4 timeline-item-title">Bliend Enterprises Private Ltd</h4>
+
+                <span>2024 — Present</span>
+
+                <p class="timeline-text">
+                  As a Creative Team Leader, I drove brand consistency by conceptualizing and implementing a unified content vision across all departments. I led a dynamic team of creatives in web development, design, graphic design, SEO, video editing, and animations, fostering collaboration and innovation. My focus on editing and refining content ensured accuracy and engagement, while my collaboration with cross-functional teams helped develop and execute impactful content marketing strategies aligned with business goals.
+                </p>
+              </li>
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Graphic Designer & Video Editor</h4>
                 <h4 class="h4 timeline-item-title">Galaxy Medias</h4>
@@ -888,6 +900,7 @@
                   As a Graphic Designer and Video Editor at Galaxy Media, I specialize in crafting engaging content for a diverse range of platforms including social media, television shows, promos, trailers, and web projects. My responsibilities encompass video editing, graphic design for marketing materials, SEO optimization, and creating compelling banners and posters. I excel in delivering visually captivating and impactful content that resonates with target audiences across various digital mediums.
                 </p>
               </li>
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Founder</h4>
                 <h4 class="h4 timeline-item-title">Shine Up</h4>
