--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                 <h4 class="h4 timeline-item-title">Founder</h4>
                 <h4 class="h4 timeline-item-title">Weebies Hub</h4>
 
-                <span>2023 — Present</span>
+                <span>2023</span>
 
                 <p class="timeline-text">
                   As Weebies Hub's founder, I oversee strategy, brand development, product curation, 
@@ -930,7 +930,7 @@
                 <h4 class="h4 timeline-item-title">3D ANIMATOR</h4>
                 <h4 class="h4 timeline-item-title">3DEZINE.FX</h4>
 
-                <span>2022 — Present</span>
+                <span>2022</span>
 
                 <p class="timeline-text">
                   Implemented design guidelines, naming conventions, and
