--- a/index.html
+++ b/index.html
@@ -1543,6 +1543,46 @@
                 </div>
               </li>
 
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="video editing"
+              >
+                <div id="video-container">
+                  <iframe
+                    width="250px"
+                    height="300px"
+                    src="https://www.youtube.com/embed/jTro09S4Yec?si=eJaFtZ-tBWUgtWiE&amp;controls=0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                    style="border: 3px solid #ffda6b; border-radius: 5px"
+                  ></iframe>
+                </div>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="video editing"
+              >
+                <div id="video-container">
+                  <iframe
+                    width="250px"
+                    height="300px"
+                    src="https://www.youtube.com/embed/BGuoWdjazf4?si=tG9L-ly-Cz9wxv8_&amp;controls=0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                    style="border: 3px solid #ffda6b; border-radius: 5px"
+                  ></iframe>
+                </div>
+              </li>
+
+
+
               <!-- <div id="video-container">
                 
                 <iframe
