--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
           <div class="info-content">
             <h1 class="name" title="Lokesh">Lokesh R</h1>
-            <h2 class="name" style="font-size: small;">Chief Editor<br> Bliend Enterprises Pvt. Ltd</h2>
+            <h2 class="name" style="font-size: small;">Creative Designer</h2>
 
             <p class="title" id="jobtitle">MECHATRONICS ENGINEER</p>
           </div>
@@ -240,7 +240,7 @@
               <div class="contact-info">
                 <p class="contact-title">Location</p>
 
-                <address>Coimbatore, Tamil Nadu</address>
+                <address>Banglore, Karnataka</address>
               </div>
             </li>
           </ul>
@@ -1984,7 +1984,7 @@
           <section class="mapbox" data-mapbox>
             <figure>
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3915.268934881416!2d77.16130661098104!3d11.093323089029708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8ff9811e4f389%3A0x19d353a0c59d2275!2sPark%20College%20Of%20Engineering%20And%20Technology!5e0!3m2!1sen!2sin!4v1702033343023!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7777.97755099086!2d77.63607264087307!3d12.908442799604419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1490bc51ea37%3A0x906a83b6e23cf7ad!2sSector%203%2C%20HSR%20Layout%2C%20Bengaluru%2C%20Karnataka%20560102!5e0!3m2!1sen!2sin!4v1738258378631!5m2!1sen!2sin"
                 width="400"
                 height="300"
                 style="border: 0"
