--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <figure class="avatar-box">
             <img
               class="loki-img-box"
-              src="assets/images/loki.jpg"
+              src="assets/images/loki-new.png"
               alt="Lokesh"
               width="80" 
               style="border-radius: 20px; border: 3px solid #ffdb70ff;"
